--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ footer .socials a:hover {
 
 <!-- 🌟 Zairuq Design Studio - Social Media Bubble Section -->
 
-<!-- ====== Center Rotating Social Icons (ZAIRUQ Design Studio) ====== -->
+<!-- ====== Floating Social Icons (ZAIRUQ Design Studio) ====== -->
 <div class="center-social-rotation">
   <a href="#" id="socialLink" target="_blank">
     <i class="fab fa-facebook-f"></i>
@@ -216,35 +216,29 @@ footer .socials a:hover {
   pointer-events: auto;
 }
 
+/* Smaller, transparent icon style */
 .center-social-rotation a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100px;
-  height: 100px;
+  width: 75px; /* smaller size (75% of 100px) */
+  height: 75px;
   border-radius: 50%;
-  font-size: 45px;
+  font-size: 30px;
   color: #fff;
+  opacity: 0.8; /* transparency */
   text-decoration: none;
-  box-shadow: 0 0 25px rgba(0,0,0,0.3);
+  box-shadow: 0 0 20px rgba(0,0,0,0.25);
   transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
 }
 
 .center-social-rotation a:hover {
-  transform: scale(1.2) rotate(15deg);
+  transform: scale(1.2);
+  opacity: 1;
   box-shadow: 0 0 25px rgba(255,255,255,0.8);
 }
 
-/* Animation effect */
-@keyframes rotateIcon {
-  0% { transform: rotate(0deg) scale(1); opacity: 0; }
-  10% { opacity: 1; }
-  50% { transform: rotate(360deg) scale(1.1); opacity: 1; }
-  90% { opacity: 1; }
-  100% { transform: rotate(720deg) scale(0.9); opacity: 0; }
-}
-
-/* Icon Color Themes */
+/* Icon background colors */
 .fa-facebook-f { background: #1877f2; }
 .fa-instagram { background: radial-gradient(circle at 30% 30%, #fdf497 0%, #fd5949 45%, #d6249f 60%, #285AEB 90%); }
 .fa-youtube { background: #ff0000; }
@@ -266,7 +260,7 @@ footer .socials a:hover {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
 <script>
-/* Social Icons Data */
+/* Social Icons */
 const icons = [
   { icon: "facebook-f", link: "https://facebook.com/zairuqdesignstudio" },
   { icon: "instagram", link: "https://instagram.com/zairuqdesignstudio" },
@@ -279,23 +273,35 @@ const icons = [
 const socialLink = document.getElementById("socialLink");
 let index = 0;
 
-function showNextIcon() {
+function animateIcon() {
   const current = icons[index];
   socialLink.href = current.link;
   socialLink.innerHTML = `<i class="fab fa-${current.icon}"></i>`;
 
-  // reset + animate
-  socialLink.style.animation = "none";
-  void socialLink.offsetWidth; // restart animation
-  socialLink.style.animation = "rotateIcon 6s ease-in-out forwards";
+  // random position within center range
+  const xMove = gsap.utils.random(-150, 150);
+  const yMove = gsap.utils.random(-100, 100);
 
-  // next icon after delay
-  index = (index + 1) % icons.length;
-  setTimeout(showNextIcon, 6000);
+  gsap.to(".center-social-rotation", {
+    x: xMove,
+    y: yMove,
+    duration: 6,
+    ease: "sine.inOut",
+    yoyo: true,
+    repeat: 1,
+    onComplete: () => {
+      index = (index + 1) % icons.length;
+      animateIcon();
+    }
+  });
 }
 
-showNextIcon();
+animateIcon();
 </script>
+
+
+
+
 
 
 <section id="services" style="margin-top:140px;">
